# calculator

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
app/: calculator.py  calculator_use_case.py
tests/: context.py  test_calculator.py
